# config

./: .alacritty.yml  .emacs  CMakeLists.txt  README.md  alacritty.yml  autocomplete.vim  fzf.vim  init.el  init.lua  init.vim  lsp_config.lua  nerdtree.vim  packages.vim  vimrc
doc/: CMakeLists.txt
nvim/: init.lua  lazy-lock.json
nvim/lua/: autocomplete.lua  common.lua  completion.lua  editor_actions.lua  explorer.lua  file_explorer.lua  general.lua  hooks.lua  lsp.lua  plugins.lua  plugins.lua.bak  saga.lua  statusline.lua  tabs.lua  treesitter.lua
nvim/lua/bindings/: bindings.lua
nvim/lua/completion/: completion.lua  saga.lua
nvim/lua/editor/: editor_actions.lua
nvim/lua/snippets/: common.lua  snippets.lua  typescript_snippets.lua
nvim/lua/treesitter/: autotag.lua  treesitter.lua
nvim/lua/ui/: code_signs.lua  file_explorer.lua  file_tree.lua  statusline.lua  tabs.lua  theme.lua
nvim/plugin/: packer_compiled.lua
ranger/: rc.conf
